--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Crusher management</string>
-
+    <string name="view"><u>View all users</u></string>
 
 
 </resources>
